--- a/README
+++ b/README
@@ -1,3 +1,2 @@
-
 A repository for work on the SDshare specification. For more
-information, refer to the SDshare web site (under construction).
+information, refer to the SDshare web site http://sdshare.org
