--- a/README
+++ b/README
@@ -1,2 +1,2 @@
 A repository for work on the SDshare specification. For more
-information, refer to the SDshare web site http://sdshare.org
+information, refer to [the SDshare web site](http://www.sdshare.org).
